--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -159,14 +159,14 @@
        "'list'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "longest_word_in_list = [\"i'm\", \"a\", \"list\"] # \"list\"\n",
-    "lmax(ongest_word_in_list)"
+    "max(longest_word_in_list)"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "smallest_number = [1, 3, 4, 78] # 1\n",
-    "smallest_number"
+    "mismallest_number"
    ]
   },
   {
