--- a/index.ipynb
+++ b/index.ipynb
@@ -240,11 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "boolean_compare = True != True # False\n",
+    "True < True # False\n",
     "# boolean_compare2 = False [COMPARISON] True # False\n",
     "# print(boolean_compare, boolean_compare2)"
    ]
