Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,11 +240,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "True < True # False\n",
+    "True != True # False\n",
     "# boolean_compare2 = False [COMPARISON] True # False\n",
     "# print(boolean_compare, boolean_compare2)"
    ]
