--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,7 @@
    ],
    "source": [
     "True != True # False\n",
-    "# boolean_compare2 = False [COMPARISON] True # False\n",
+    "False [COMPARISON] True # False\n",
     "# print(boolean_compare, boolean_compare2)"
    ]
   },
