Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,7 @@
    ],
    "source": [
     "True != True # False\n",
-    "False [COMPARISON] True # False\n",
+    "False == True # False\n",
     "# print(boolean_compare, boolean_compare2)"
    ]
   },
