--- a/index.ipynb
+++ b/index.ipynb
@@ -274,11 +274,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "string_compare = \"stacy\" !\"STACY\" # True\n",
+    "\"stacy\" != \"STACY\" # True\n",
     "# string_compare2 = \"hey i love python!\" [COMPARISON] \"hi love python\" # False\n",
     "# string_compare3 = \"this string is bigger than the other\" [COMPARISON] \"that is true\" # True\n",
     "# print(string_compare, string_compare2, string_compare3)"
