--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    "source": [
     "\"stacy\" != \"STACY\" # True\n",
     "# string_compare2 = \"hey i love python!\" [COMPARISON] \"hi love python\" # False\n",
-    "# string_compare3 = \"this string is bigger than the other\" [COMPARISON] \"that is true\" # True\n",
+    "\"this string is bigger than the other\" [COMPARISON] \"that is true\" # True\n",
     "# print(string_compare, string_compare2, string_compare3)"
    ]
   },
