Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    "source": [
     "\"stacy\" != \"STACY\" # True\n",
     "# string_compare2 = \"hey i love python!\" [COMPARISON] \"hi love python\" # False\n",
-    "\"this string is bigger than the other\" [COMPARISON] \"that is true\" # True\n",
+    "len(\"this string is bigger than the other\" >\"that is true\" # True\n",
     "# print(string_compare, string_compare2, string_compare3)"
    ]
   },
