Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
    "source": [
     "\"stacy\" != \"STACY\" # True\n",
     "# string_compare2 = \"hey i love python!\" [COMPARISON] \"hi love python\" # False\n",
-    "len(\"this string is bigger than the other\") >len(\"that is true\" # True\n",
+    "len(\"this string is bigger than the other\") >len(\"that is true\") # True\n",
     "# print(string_compare, string_compare2, string_compare3)"
    ]
   },
