Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -350,23 +350,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "2 and [] # []\n",
-    "# logical_compare2 = n [] # True\n",
+    "not [] # True\n",
     "# logical_compare3 = 0 [COMPARISON] [] # 0\n",
     "# logical_compare4 = True [COMPARISON] 2 # 2\n",
     "# logical_compare5 = 2 [COMPARISON] 3 # 2\n",
