--- a/index.ipynb
+++ b/index.ipynb
@@ -350,16 +350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "[]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
    "source": [
     "2 and [] # []\n",
     "not [] # True\n",
-    "# logical_compare3 = 0 [COMPARISON] [] # 0\n",
+    "0 and [] # 0\n",
     "# logical_compare4 = True [COMPARISON] 2 # 2\n",
     "# logical_compare5 = 2 [COMPARISON] 3 # 2\n",
     "# logical_compare6 = [COMPARISON] True # False\n",
