--- a/index.ipynb
+++ b/index.ipynb
@@ -350,16 +350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
     "2 and [] # []\n",
     "not [] # True\n",
     "0 and [] # 0\n",
-    "# logical_compare4 = True [COMPARISON] 2 # 2\n",
+    "True or 2 # 2\n",
     "# logical_compare5 = 2 [COMPARISON] 3 # 2\n",
     "# logical_compare6 = [COMPARISON] True # False\n",
     "# logical_compare7 = False [COMPARISON] 2 # False\n",
