--- a/index.ipynb
+++ b/index.ipynb
@@ -350,16 +350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "3"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
     "not [] # True\n",
     "0 and [] # 0\n",
     "True or 2 # 2\n",
-    "# logical_compare5 = 2 or 3 # 2\n",
+    "2 and 3 # 2\n",
     "# logical_compare6 = [COMPARISON] True # False\n",
     "# logical_compare7 = False [COMPARISON] 2 # False\n",
     "# print(logical_compare, logical_compare2, logical_compare3, logical_compare4,\n",
