--- a/index.ipynb
+++ b/index.ipynb
@@ -350,16 +350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
     "0 and [] # 0\n",
     "True or 2 # 2\n",
     "2 or 3 # 2\n",
-    "# logical_compare6 = [COMPARISON] True # False\n",
+    "not True # False\n",
     "# logical_compare7 = False [COMPARISON] 2 # False\n",
     "# print(logical_compare, logical_compare2, logical_compare3, logical_compare4,\n",
     "#       logical_compare5, logical_compare6, logical_compare7)"
