Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "False"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
     "True or 2 # 2\n",
     "2 or 3 # 2\n",
     "not True # False\n",
-    "# logical_compare7 = False 2 # False\n",
+    "False and 2 # False\n",
     "# print(logical_compare, logical_compare2, logical_compare3, logical_compare4,\n",
     "#       logical_compare5, logical_compare6, logical_compare7)"
    ]
