--- a/index.ipynb
+++ b/index.ipynb
@@ -385,13 +385,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = []\n",
     "b = a\n",
-    "# identity_compare = {} [COMPARISON] {} # False\n",
+    "# identity_compare = {}  {} # False\n",
     "# identity_compare2 = a [COMPARISON] b # True\n",
     "# identity_compare3 = b [COMPARISON] [] # True\n",
     "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
