--- a/index.ipynb
+++ b/index.ipynb
@@ -385,13 +385,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = []\n",
     "b = a\n",
-    "# identity_compare = {}  {} # False\n",
+    "{} is not {} # False\n",
     "# identity_compare2 = a [COMPARISON] b # True\n",
     "# identity_compare3 = b [COMPARISON] [] # True\n",
     "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
