--- a/index.ipynb
+++ b/index.ipynb
@@ -385,16 +385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
    "source": [
     "a = []\n",
     "b = a\n",
-    "{} is not {} # False\n",
+    "{} is {} # False\n",
     "# identity_compare2 = a [COMPARISON] b # True\n",
     "# identity_compare3 = b [COMPARISON] [] # True\n",
     "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
