--- a/index.ipynb
+++ b/index.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "False"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
     "a = []\n",
     "b = a\n",
     "{} is {} # False\n",
-    "# identity_compare2 = a is b # True\n",
+    "a isb # True\n",
     "# identity_compare3 = b [COMPARISON] [] # True\n",
     "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
     "# identity_compare5 = \"Same\" [COMPARISON] \"Same\" # False\n",
