Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -385,16 +385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
     "a = []\n",
     "b = a\n",
     "{} is {} # False\n",
-    "a isb # True\n",
+    "a is b # True\n",
     "# identity_compare3 = b [COMPARISON] [] # True\n",
     "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
     "# identity_compare5 = \"Same\" [COMPARISON] \"Same\" # False\n",
