--- a/index.ipynb
+++ b/index.ipynb
@@ -385,16 +385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
     "b = a\n",
     "{} is {} # False\n",
     "a is b # True\n",
-    "# identity_compare3 = b I[] # True\n",
+    "b is [] # True\n",
     "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
     "# identity_compare5 = \"Same\" [COMPARISON] \"Same\" # False\n",
     "# identity_compare6 = [1,3,4] [COMPARISON] [1,2,3] # False\n",
