--- a/index.ipynb
+++ b/index.ipynb
@@ -385,16 +385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
    "source": [
     "\n",
     "b is [] # True\n",
-    "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
+    "9 is not 10 # True\n",
     "# identity_compare5 = \"Same\" [COMPARISON] \"Same\" # False\n",
     "# identity_compare6 = [1,3,4] [COMPARISON] [1,2,3] # False\n",
     "# print(identity_compare, identity_compare2, identity_compare3,\n",
