--- a/index.ipynb
+++ b/index.ipynb
@@ -385,16 +385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,8 +403,8 @@
     "\n",
     "b is [] # True\n",
     "9 is not 10 # True\n",
-    "# identity_compare5 = \"Same\" is not \"Same\" # False\n",
-    "# identity_compare6 = [1,3,4] [COMPARISON] [1,2,3] # False\n",
+    "\"Same\" is not \"Same\" # False\n",
+    "# identity_compare6 = [1,3,4] is [1,2,3] # False\n",
     "# print(identity_compare, identity_compare2, identity_compare3,\n",
     "#       identity_compare4, identity_compare5, identity_compare6)"
    ]
