Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -385,18 +385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-45-c1ca1ac2e397>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-c1ca1ac2e397>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    [1,3,4] is [1,2,3] # False\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
     }
    ],
    "source": [
@@ -404,7 +402,7 @@
     "b is [] # True\n",
     "9 is not 10 # True\n",
     "\"Same\" is not \"Same\" # False\n",
-    "# identity_compare6 = [1,3,4] is [1,2,3] # False\n",
+    "[1,3,4] is [1,2,3] # False\n",
     "# print(identity_compare, identity_compare2, identity_compare3,\n",
     "#       identity_compare4, identity_compare5, identity_compare6)"
    ]
